@@ -1,13 +1,18 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<form string="Product" col="6">
-    <label name="template"/>
-    <field name="template"/>
-    <label name="code"/>
-    <field name="code"/>
-    <label name="active"/>
-    <field name="active" xexpand="0" width="100"/>
-    <separator name="description" colspan="6"/>
-    <field name="description" colspan="6"/>
-</form>
+<data>
+    <xpath expr="/form/field[@name='name']" position="after">
+        <label name="code"/>
+        <field name="code"/>
+    </xpath>
+    <xpath expr="/form/notebook/page[@id='general']/label[@name='type']"
+        position="before">
+        <label name="template"/>
+        <field name="template" colspan="3"/>
+    </xpath>
+    <xpath expr="/form/notebook/page/field[@name='products']" position="replace">
+        <separator name="description" colspan="6"/>
+        <field name="description" colspan="6"/>
+    </xpath>
+</data>
